--- a/pages/9687.html
+++ b/pages/9687.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1097,7 +1097,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#formalizations'>Formalizations</a><ul><li><a href='#in__supersymmetric_yangmills_theory'>In <math class='maruku-mathml' display='inline' id='mathml_9d1355e9f9029abd488b5063e0745a5c3662e559_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> supersymmetric Yang-Mills theory</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#ReferencesInYangMillsTheory'>In Yang-Mills theory</a><ul><li><a href='#general'>General</a></li><li><a href='#ViaMonopoleCondensation'>Via monopole condensation</a></li></ul></li><li><a href='#ReferencesInSuperYangMillsTheory'>In super-Yang-Mills theory and under AdS/CFT correspondence</a></li></ul></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#formalizations'>Formalizations</a><ul><li><a href='#in__supersymmetric_yangmills_theory'>In <math class='maruku-mathml' display='inline' id='mathml_463bcb68c31e619c5aa951df50bfd7d4dddc4636_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> supersymmetric Yang-Mills theory</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#ReferencesInYangMillsTheory'>In Yang-Mills theory</a><ul><li><a href='#general'>General</a></li><li><a href='#ViaMonopoleCondensation'>Via monopole condensation</a></li></ul></li><li><a href='#ReferencesInSuperYangMillsTheory'>In super-Yang-Mills theory</a></li><li><a href='#under_the_adscft_correspondence'>Under the AdS/CFT correspondence</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>Confinement (e.g <a href='#Espiru94'>Espiru 94</a>) is the (expected) phenomenon in <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a>/<a class='existingWikiWord' href='/nlab/show/QCD'>QCD</a> that <a class='existingWikiWord' href='/nlab/show/quark'>quark</a>-excitations must form <a class='existingWikiWord' href='/nlab/show/bound+state'>bound states</a> which are neutral under the color charge – such as the <a class='existingWikiWord' href='/nlab/show/hadron'>hadrons</a> (<a class='existingWikiWord' href='/nlab/show/proton'>protons</a>, <a class='existingWikiWord' href='/nlab/show/neutron'>neutrons</a>) and <a class='existingWikiWord' href='/nlab/show/meson'>mesons</a>.</p>
@@ -1106,7 +1106,7 @@ margin-left: 0em;
 
 <h2 id='formalizations'>Formalizations</h2>
 
-<h3 id='in__supersymmetric_yangmills_theory'>In <math class='maruku-mathml' display='inline' id='mathml_9d1355e9f9029abd488b5063e0745a5c3662e559_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> supersymmetric Yang-Mills theory</h3>
+<h3 id='in__supersymmetric_yangmills_theory'>In <math class='maruku-mathml' display='inline' id='mathml_463bcb68c31e619c5aa951df50bfd7d4dddc4636_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> supersymmetric Yang-Mills theory</h3>
 
 <p>While confinement in plain <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a> is still waiting for mathematical formalization and <a class='existingWikiWord' href='/nlab/show/proof'>proof</a> (see <a href='#JaffeWitten'>Jaffe-Witten</a>), there is a variant of <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a> with more <a class='existingWikiWord' href='/nlab/show/symmetry'>symmetry</a> where the phenomenon has been demonstrated, namely in <a class='existingWikiWord' href='/nlab/show/N%3D2+D%3D4+super+Yang-Mills+theory'>N=2 D=4 super Yang-Mills theory</a> (<a href='#SeibergWitten94'>Seiberg-Witten 94</a>).</p>
 
@@ -1154,7 +1154,7 @@ margin-left: 0em;
 
 <ul>
 <li id='Hooft75'>
-<p><a class='existingWikiWord' href='/nlab/show/Gerard+%E2%80%99t+Hooft'>Gerard ’t Hooft</a>, in Proceed.of the Europ.Phys.Soc. 1975, ed.by A.Zichichi (Editrice Compositori, Bologna, 1976), p.1225.</p>
+<p><a class='existingWikiWord' href='/nlab/show/Gerard+%E2%80%99t+Hooft'>Gerard &#39;t Hooft</a>, in Proceed.of the Europ.Phys.Soc. 1975, ed.by A.Zichichi (Editrice Compositori, Bologna, 1976), p.1225.</p>
 </li>
 
 <li id='Mandelstam76'>
@@ -1176,7 +1176,7 @@ margin-left: 0em;
 <li><em>Dimensional Transmutation by Monopole Condensation in QCD</em> (<a href='http://arxiv.org/abs/1206.6936'>arXiv:1206.6936</a>)</li>
 </ul>
 
-<h3 id='ReferencesInSuperYangMillsTheory'>In super-Yang-Mills theory and under AdS/CFT correspondence</h3>
+<h3 id='ReferencesInSuperYangMillsTheory'>In super-Yang-Mills theory</h3>
 
 <p>Confinement in <a class='existingWikiWord' href='/nlab/show/N%3D2+D%3D4+super+Yang-Mills+theory'>N=2 D=4 super Yang-Mills theory</a> by a version of the monopole condensation of (<a href='#Hooft75'>t Hooft 75</a>, <a href='#Mandelstam76'>Mandelstam 76</a>) was demonstrated in</p>
 
@@ -1196,11 +1196,13 @@ margin-left: 0em;
 <li id='Yung00'>Alexei Yung, <em>What Do We Learn about Confinement from the Seiberg-Witten Theory</em> (<a href='http://arxiv.org/abs/hep-th/0005088'>arXiv:hep-th/0005088</a>)</li>
 </ul>
 
+<h3 id='under_the_adscft_correspondence'>Under the AdS/CFT correspondence</h3>
+
 <p>Discussion in the context of the <a class='existingWikiWord' href='/nlab/show/AdS-CFT'>AdS-CFT correspondence</a> is in</p>
 
 <ul>
 <li>
-<p>D. S. Berman, Maulik K. Parikh, <em>Confinement and the AdS/CFT Correspondence</em>, Phys.Lett. B483 (2000) 271-276 (<a href='http://es.arxiv.org/abs/hep-th/0002031'>arXiv:hep-th/0002031</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/David+Berman'>David Berman</a>, Maulik K. Parikh, <em>Confinement and the AdS/CFT Correspondence</em>, Phys.Lett. B483 (2000) 271-276 (<a href='https://arxiv.org/abs/hep-th/0002031'>arXiv:hep-th/0002031</a>)</p>
 </li>
 
 <li>
@@ -1215,14 +1217,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 12, 2017 05:46:17 
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (129.12.18.176)
+  Revised on December 12, 2017 03:34:38 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (178.6.238.60)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/confinement" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/confinement/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/confinement" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/confinement" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/confinement" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/confinement/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/confinement" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/confinement" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
