--- a/pages/18847.html
+++ b/pages/18847.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Sandbox in nLab
+      BV-Lagrangian density in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Sandbox
+      BV-Lagrangian density
   </h1>
 
 
@@ -308,42 +308,41 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_67252858f11522f80db53f3c0f4f92e5bd56907f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mstyle mathvariant='bold'><mi>A</mi></mstyle></mtd> <mtd><mover><mo>⟶</mo><mrow><msup><mi>e</mi> <mrow><mo stretchy='false'>{</mo><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mi>gf</mi></msub><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>}</mo></mrow></msup></mrow></mover></mtd> <mtd><msup><mi>e</mi> <mrow><mo stretchy='false'>{</mo><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mi>gf</mi></msub><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>}</mo></mrow></msup><mrow><mo>(</mo><mstyle mathvariant='bold'><mi>A</mi></mstyle><mo>)</mo></mrow></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mi>s</mi></mpadded></msup><mo stretchy='false'>↓</mo></mtd> <mtd></mtd> <mtd><msup><mo stretchy='false'>↓</mo> <mpadded width='0'><mrow><msub><mi>s</mi> <mi>gf</mi></msub></mrow></mpadded></msup></mtd></mtr> <mtr><mtd><mrow><mo>{</mo><mrow><mo>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo>+</mo><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mi>BRST</mi></msub><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mo>,</mo><mspace width='thinmathspace'></mspace><mstyle mathvariant='bold'><mi>A</mi></mstyle><mo>}</mo></mrow></mtd> <mtd><munder><mo>⟶</mo><mrow><msup><mi>e</mi> <mrow><mo stretchy='false'>{</mo><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mi>gf</mi></msub><mspace width='thinmathspace'></mspace><mo>,</mo><mspace width='thinmathspace'></mspace><mo>−</mo><mo stretchy='false'>}</mo></mrow></msup></mrow></munder></mtd> <mtd><mrow><mo>{</mo><msup><mi>e</mi> <mrow><mo stretchy='false'>{</mo><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mi>gf</mi></msub><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>}</mo></mrow></msup><mrow><mo>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo>+</mo><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mi>BRST</mi></msub><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mo>,</mo><mspace width='thinmathspace'></mspace><msup><mi>e</mi> <mrow><mo stretchy='false'>{</mo><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mi>gf</mi></msub><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>}</mo></mrow></msup><mo stretchy='false'>(</mo><mstyle mathvariant='bold'><mi>A</mi></mstyle><mo stretchy='false'>)</mo><mo>}</mo></mrow></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
-  \array{
-    \mathbf{A} 
-      &amp;\overset{e^{\{\mathbf{L}_{gf},-\}}}{\longrightarrow}&amp;
-    e^{\{\mathbf{L}_{gf},-\}}\left( \mathbf{A} \right)
-    \\
-    {}^{\mathllap{s}}\downarrow &amp;&amp; \downarrow^{\mathrlap{s_{gf}}}
-    \\
-    \left\{ \left(-\mathbf{L} + \mathbf{L}_{BRST}\right)\,,\, \mathbf{A}\right\}
-      &amp;\underset{ e^{\{\mathbf{L}_{gf}\,,\,-\}} }{\longrightarrow}&amp;
-    \left\{ e^{\{\mathbf{L}_{gf},-\}}\left(-\mathbf{L} + \mathbf{L}_{BRST}\right)
-      \,,\, 
-    e^{\{\mathbf{L}_{gf},-\}}(\mathbf{A})
-    \right\}      
-  }
+    <p>In <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a> the plain <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a> <math class='maruku-mathml' display='inline' id='mathml_2fbb21ef514e68be78bd2261680c67090881fbea_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>L</mi></mstyle></mrow><annotation encoding='application/x-tex'>\mathbf{L}</annotation></semantics></math> of a given <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a> is accompanied by an auxiliary Lagrangian density <math class='maruku-mathml' display='inline' id='mathml_2fbb21ef514e68be78bd2261680c67090881fbea_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mi>BRST</mi></msub></mrow><annotation encoding='application/x-tex'>\mathbf{L}_{BRST}</annotation></semantics></math> depending on <a class='existingWikiWord' href='/nlab/show/auxiliary+field'>auxiliary fields</a> such as <a class='existingWikiWord' href='/nlab/show/ghost+field'>ghost fields</a> and <a class='existingWikiWord' href='/nlab/show/antifield'>antifields</a>, such that the <a class='existingWikiWord' href='/nlab/show/local+antibracket'>local antibracket</a> with the sum <math class='maruku-mathml' display='inline' id='mathml_2fbb21ef514e68be78bd2261680c67090881fbea_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo>+</mo><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mi>BRST</mi></msub></mrow><annotation encoding='application/x-tex'>-\mathbf{L} + \mathbf{L}_{BRST}</annotation></semantics></math> yields the <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST differential</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_2fbb21ef514e68be78bd2261680c67090881fbea_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>s</mi><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mrow><mo>{</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo>+</mo><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mi>BRST</mi></msub><mspace width='thinmathspace'></mspace><mo>,</mo><mspace width='thinmathspace'></mspace><mo>−</mo><mo>}</mo></mrow></mrow><annotation encoding='application/x-tex'>
+  s
+  \;=\;
+  \left\{
+     - \mathbf{L}
+     + \mathbf{L}_{BRST}
+     \,,\,
+     -
+  \right\}
 
 </annotation></semantics></math></div>
+<p>which models the <a class='existingWikiWord' href='/nlab/show/derived+critical+locus'>derived critical locus</a> <math class='maruku-mathml' display='inline' id='mathml_2fbb21ef514e68be78bd2261680c67090881fbea_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>δ</mi> <mi>EL</mi></msub><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo>≃</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>\delta_{EL}\mathbf{L} \simeq 0</annotation></semantics></math> inside the <a class='existingWikiWord' href='/nlab/show/homotopy+quotient'>homotopy quotient</a> modeled by the <a class='existingWikiWord' href='/nlab/show/BRST+complex'>BRST complex</a> of the theory.</p>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on December 14, 2017 10:29:36 
+  Created on December 14, 2017 10:24:57 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1354" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1354 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/BV-Lagrangian+density" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Sandbox" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/BV-Lagrangian+density" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Sandbox" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/BV-Lagrangian+density" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Sandbox" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/BV-Lagrangian+density" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
